<?xml version="1.0"?>
<package format="2">
  <name>paho_c</name>
  <version>1.3.6</version>
  <description>
    Paho mqtt C client
  </description>

  <maintainer email="alexis@thekobi.com">Alexis Paques</maintainer>

  <license>EPLv2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
